--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -32,3 +32,5 @@ test:
 
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  secret_sendgrid_account: <%= Figaro.env.secret_mailgun_account %>
+  secret_sendgrid_password: <%= Figaro.env.secret_mailgun_password %>
